--- a/frontend/src/app/jobs/components/job-list-client/job-list-client.component.scss
+++ b/frontend/src/app/jobs/components/job-list-client/job-list-client.component.scss
@@ -18,3 +18,7 @@
 .mat-row:nth-child(odd) {
   background-color: #ffffff; /* Apply your desired odd row background color */
 }
+
+.filter-form {
+  margin: 1rem;
+}
