--- a/frontend/src/app/auth/components/security/security.component.html
+++ b/frontend/src/app/auth/components/security/security.component.html
@@ -13,6 +13,10 @@
     <mat-error *ngIf="updatePasswordForm.controls['newPassword'].hasError('required')">
       New Password is <strong>required</strong>
     </mat-error>
+    <mat-error *ngIf="updatePasswordForm.controls['newPassword'].hasError('required')">Password is required.</mat-error>
+    <mat-error *ngIf="updatePasswordForm.controls['newPassword'].hasError('minlength')">Password must be at least 6 characters long.</mat-error>
+    <mat-error *ngIf="updatePasswordForm.controls['newPassword'].hasError('maxlength')">Password cannot exceed 12 characters.</mat-error>
+    <mat-error *ngIf="updatePasswordForm.controls['newPassword'].hasError('pattern')">Password must contain at least one uppercase letter, one number, and one special character.</mat-error>
   </mat-form-field>
 
   <mat-form-field appearance="fill">
